# mateval

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/mateval/: common.hpp  comparison.hpp  comparison_cuda.hpp  cond.hpp  latms_cuda.hpp  mateval.hpp  minmax_cuda.hpp  norm.hpp  quad.hpp  utils_cuda.hpp
include/mateval/cuda/: comparison.hpp  latms.hpp  minmax.hpp  norm.hpp  utils.hpp
src/: comparison_cuda.cu  latms_cuda.cu  minmax_cuda.cu  norm_cuda.cu  utils.hpp
tests/: .gitignore  Makefile  comparison.cpp  comparison.hpp  cond.cpp  cuda.cu  cuda_latms.cu  cuda_norm.cu  cuda_operation.cu  cuda_throughput.cu  mateval.cpp  norm.cpp  quad.cpp  util.cpp
